feat: created theme-toogle dark and light component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<div class="app-container">
+   <app-theme-toogle></app-theme-toogle>
+</div>
+
 <app-home></app-home>
 
 <router-outlet></router-outlet>
