--- a/src/app/components/box-content/box-content.component.html
+++ b/src/app/components/box-content/box-content.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-    <h1></h1>
     
-    <app-subtitles></app-subtitles>
-
+    <h1>Currículo Ninja</h1>
+    
+    <app-curriculum-content></app-curriculum-content>
 
 </div>
