--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,3 @@
-<div class="home-container">
-    <app-box-content></app-box-content>
-</div>
+<app-box-content></app-box-content>
+
+<app-button-page-link></app-button-page-link>
