--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style-type: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style-type: none;
 }
 
 body {
-    font-family: Arial, sans-serif;
-    background-color: #EEEEEE;
-    margin: 0;
-    padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: #EEEEEE;
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.dark-theme {
+  background-color: #292828;
+  color: #ffffff;
 }
