style: editting color, texts and backgrounds of all components

--- a/src/app/components/box-content/box-content.component.html
+++ b/src/app/components/box-content/box-content.component.html
@@ -1,7 +1,10 @@
 <div class="container">
-    
-    <h1>Currículo Ninja</h1>
-    
+    <header>
+        <img src="../../../assets/images/logo_cv_ninja.png" alt="">
+    </header>
+  
     <app-curriculum-content></app-curriculum-content>
-
+    
+    <app-button-page-link></app-button-page-link>
 </div>
+
