--- a/src/app/components/curriculum-content/curriculum-content.component.html
+++ b/src/app/components/curriculum-content/curriculum-content.component.html
@@ -55,4 +55,61 @@
             <a href="../../../assets/curriculum/modelo_curriculo_googledocs_first.docx" target="_blank" download>Download</a>
         </button>
 
+        <div class="box-information">
+            <h2>Modelo 5 - </h2>
+            <p>Disponibilizado por: </p>
+            <p>Março de 2024</p>
+        
+            <div class="layout-curriculum"> <img src=""
+                    alt="Imagem contendo modelo de curriculo gratuito">
+            </div>
+        
+            <button>
+                <a href=""
+                    target="_blank" download>Download</a>
+            </button>
+        </div>
+        
+        <div class="box-information">
+            <h2>Modelo 6 - </h2>
+            <p>Disponibilizado por: </p>
+            <p>Março de 2024</p>
+        
+            <div class="layout-curriculum">
+                <img src=""
+                    alt="Imagem contendo modelo de curriculo gratuito">
+            </div>
+        
+            <button>
+                <a href=""
+                    target="_blank" download>Download</a>
+            </button>
+        </div>
+        
+        <div class="box-information">
+            <h2>Modelo 7 - </h2>
+            <p>Disponibilizado por: </p>
+            <p>Março de 2024</p>
+        
+            <div class="layout-curriculum"> <img src=""
+                    alt="Imagem contendo modelo de curriculo gratuito">
+            </div>
+        
+            <button>
+                <a href="" target="_blank" download>Download</a>
+            </button>
+        
+            <div class="box-information">
+                <h2>Modelo 8 - </h2>
+                <p>Disponibilizado por: </p>
+                <p>Março de 2024</p>
+            
+                <div class="layout-curriculum"> <img src=""
+                        alt="Imagem contendo modelo de curriculo gratuito">
+                </div>
+            
+                <button>
+                    <a href="" target="_blank" download>Download</a>
+                </button>
+
 </div>
