--- a/src/app/components/theme-toogle/theme-toogle.component.html
+++ b/src/app/components/theme-toogle/theme-toogle.component.html
@@ -1,3 +1,3 @@
 <button mat-icon-button (click)="toggleTheme()">
-    <div class="mat-icon">{{ isDarkMode ? '⚪ Light' : '⚫ Dark' }}</div>
+    <div class="mat-icon">{{ isDarkMode ? '🌓' : '🌗' }}</div>
 </button>
