--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,8 +8,10 @@
 
 @media screen and (max-width: 600px) {
     .app-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        position: fixed;
+        top: 10px;
+        right: 10px;
+        overflow: auto;
+        z-index: 1;
     }
 }
