--- a/src/app/components/box-content/box-content.component.css
+++ b/src/app/components/box-content/box-content.component.css
@@ -1,16 +1,23 @@
 .container {
+    margin: 0 auto;
     max-width: 800px;
-    margin: 40px auto;
     padding: 20px;
-    background-color: #fff;
+    background: rgba(255, 255, 255, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
-    text-align: center;
-    color: #0D6FFC;
-    border-bottom: 1px solid #000000;
+header {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header img {
+    max-width: 200px;
+    margin: 0 auto;
 }
 
 @media screen and (max-width: 600px) {
