--- a/src/app/components/button-page-link/button-page-link.component.css
+++ b/src/app/components/button-page-link/button-page-link.component.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 button {
@@ -16,9 +16,9 @@ button {
     font-size: 16px;
     font-weight: 600;
     line-height: 20px;
-    margin: 0 140px;
+    margin: 0 140px 0;
     outline: none;
-    padding: 13px 23px;
+    padding: 10px 23px;
     position: relative;
     text-align: center;
     text-decoration: none;
